--- a/hotel.html
+++ b/hotel.html
@@ -102,26 +102,26 @@
             <div class="_card_banners">
                 <div class="card_d card_1">
                    <mat-icon class="mat-18"><img src="assets/plane2.png"  class="icoS"></mat-icon> 
-                   <b>Banner</b> 
+                   <img src="img/thailand.jpg" alt="" width="200px" height="200px">
                 </div>
                 <div class="card_d card_2">
                      <mat-icon class="mat-18"><img src="assets/plane2.png" class="icoS"></mat-icon> 
-                      <b>Banner</b> 
+                     <img src="img/japan.jpg" alt="" width="200px" height="200px"> 
                 </div>
                 <div class="card_d card_3">
                      <mat-icon class="mat-18"><img src="assets/plane2.png"  class="icoS"></mat-icon> 
-                      <b>Banner</b> 
+                     <img src="img/post.jpg" alt="" width="200px" height="200px">
                 </div>
             </div>
         </div>
     </div><br><br><br><br><br><br>
-    <div class="banner_or_image">
-        <div class="time2trawel-holidays">Time2Trawel Holidays</div><br>
-        <div class="book-domestic-and">Book Domestic and International Holidays</div><br>
-        <div class="time2trawel-is-one">Time2Trawel is one of India's leading online travel portals, offering holiday packages in India and abroad. Time@Trawel offers value for money packages, luxury packages, group departures as well as customized packages.</div>
-       </div>
-       
-    <div class="copyright">
+    <div class="whyBlock_section">
+        <h1>Time2Trawel</h1>
+        <b>Why to book hotels Online with Time2Trawel.com ?</b>
+        <p>
+        Time2Trawel.com who has always been on the forefront of assuring a comfortable stay which is a bang for your bucks, is offering you online hotel booking that guarantees you hygienic, sanitised rooms across hotels in India. 
+      </div>
+      <div class="copyright">
         Copyright © 2024 Time2Trawel Online  India. All rights reserved
     </div>
     </body>
